@@ -584,20 +584,6 @@ end_import
 
 begin_import
 import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|base
-operator|.
-name|Strings
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|slf4j
@@ -2662,6 +2648,64 @@ argument_list|(
 name|url
 argument_list|)
 expr_stmt|;
+block|}
+if|if
+condition|(
+name|sliceShardsStr
+operator|.
+name|length
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+name|boolean
+name|tolerant
+init|=
+name|rb
+operator|.
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|getBool
+argument_list|(
+name|ShardParams
+operator|.
+name|SHARDS_TOLERANT
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|tolerant
+condition|)
+block|{
+comment|// stop the check when there are no replicas available for a shard
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVICE_UNAVAILABLE
+argument_list|,
+literal|"no servers hosting shard: "
+operator|+
+name|rb
+operator|.
+name|slices
+index|[
+name|i
+index|]
+argument_list|)
+throw|;
+block|}
 block|}
 name|rb
 operator|.
